// Proto file defining the TridentService and related messages.

syntax = "proto3";

package trident.v1;

import "google/protobuf/timestamp.proto";

// VersionService defines the gRPC service for retrieving the Trident version
// information.
service VersionService {
  // Version returns the Trident version.
  rpc Version(VersionRequest) returns (VersionResponse);
}

message VersionRequest {}

message VersionResponse {
  // Trident version string.
  string version = 1;
}

// StreamDiskService defines the gRPC service for streaming disk images to a
// host.
service StreamingDiskService {
  // StreamDisk streams an OS image to the target device.
  rpc StreamDisk(StreamDiskRequest) returns (stream ServicingResponse);
}

message StreamDiskRequest {
  // URL to the image file to be streamed.
  string image_url = 1;
  // Hash of the image file for integrity verification. When not present,
  // Trident will not enforce integrity verification of the streamed image.
  optional string image_hash = 2;
  // The reboot management parameters for the servicing operation.
  RebootManagement reboot = 3;
}

// ServicingResponse defines the messages that are streamed back to the caller
// when performing a servicing task. The response messages can be of three
// types:
//
// - A start message indicating the beginning of the servicing operation,
// - Log messages generated during the servicing operation, and
// - A final status message indicating the completion of the servicing
//   operation. The final status message includes information about whether the
//   servicing operation was successful or not, and whether a reboot is required
//   to finalize the servicing.
message ServicingResponse {
  // Timestamp of the response message.
  google.protobuf.Timestamp timestamp = 1;
  // Body of the response message.
  oneof response {
    // A start message indicating the beginning of the servicing operation.
    Start start = 2;
    // A log message from the servicing operation.
    Log log = 3;
    // A final status message from the servicing operation.
    FinalStatus final_status = 4;
  }
}

// RebootManagement defines the reboot management parameters for a servicing
// operation.
message RebootManagement {
  // Informs trident about how a reboot required for the servicing operation
  // should be handled. This allows the caller to choose whether they want to
  // handle the reboot themselves, or have Trident handle it automatically. When
  // not present, Trident will default to handling reboots automatically.
  RebootHandling handling = 1;
}

// RebootHandling defines how reboots required for a servicing operation should
// be handled.
enum RebootHandling {
  REBOOT_HANDLING_UNSPECIFIED = 0;
  // Trident will handle any required reboots of the system.
  AUTO_REBOOT = 1;
  // The caller will handle any required reboots of the system.
  CALLER_HANDLES_REBOOT = 2;
}

// Log represents a log record generated by Trident during a servicing
// operation. The fields map the values provided by the Record struct in the
// Rust log crate. (https://docs.rs/log/latest/log/struct.Record.html)
message Log {
  // Level of the log message.
  LogLevel level = 1;
  // Body of the log message.
  string message = 2;
  // Module where the log message originated.
  string module = 3;
  // The target defined in the log message. Generally same as module, but can be
  // configured to be different.
  string target = 4;
  // Location where the log message was generated.
  FileLocation location = 5;
}

// Rust log levels
enum LogLevel {
  LOG_LEVEL_UNSPECIFIED = 0;
  LOG_LEVEL_ERROR       = 1;
  LOG_LEVEL_WARN        = 2;
  LOG_LEVEL_INFO        = 3;
  LOG_LEVEL_DEBUG       = 4;
  LOG_LEVEL_TRACE       = 5;
}

// FinalStatus represents the final status of a servicing operation, including
// whether the operation was successful, and whether a reboot is required to
// finalize the servicing.
message FinalStatus {
  // Final status of the servicing operation.
  StatusCode status = 1;

  // Message associated with the final status.
  optional TridentError error = 2;

  // Whether a reboot is required to complete the servicing operation. If true,
  // the caller is expected to reboot the system to finalize the servicing
  // immediately upon receiving this status.
  bool reboot_required = 3;

  // Whether Trident operation started a reboot. If true, the system is expected
  // to reboot automatically shortly after this message is received to finalize
  // the servicing. No further action from the caller is needed. This field can
  // be true only if reboot_required is false.
  bool reboot_started = 4;
}

// Represents the final status of a servicing operation.
enum StatusCode {
  STATUS_CODE_UNSPECIFIED = 0;
  STATUS_CODE_SUCCESS     = 1;
  STATUS_CODE_FAILURE     = 2;
}

message Start {}

// TridentError represents an error that occurred during a Trident operation.
message TridentError {
  // Error kind.
  TridentErrorKind kind = 1;
  // Error subkind.
  string subkind = 2;
  // Full formatted body of the error, including context and source, suitable
  // for display in logs and user interfaces.
  string message = 3;
  // The specific error message that was generated.
  string error_message = 4;
  // Location in the file where the error occurred.
  FileLocation location = 5;
}

// Major kinds of Trident errors.
enum TridentErrorKind {
  TRIDENT_ERROR_KIND_UNSPECIFIED = 0;
  // Identifies errors that occur when the execution environment is
  // misconfigured.
  EXECUTION_ENVIRONMENT_MISCONFIGURATION_ERROR = 1;
  // Identifies errors that are related to health checks.
  HEALTH_CHECKS_ERROR = 2;
  // Identifies errors that occur when Trident fails to initialize.
  INITIALIZATION_ERROR = 3;
  // Identifies errors that occur due to an internal bug or failure in Trident.
  INTERNAL_ERROR = 4;
  // Identifies errors that occur when the user provides invalid input.
  INVALID_INPUT_ERROR = 5;
  // Identifies errors that occur during servicing and require further user
  // investigation, to determine whether the error occurred due to an internal
  // failure in Trident, a failure in one of its dependencies, or a system
  // misconfiguration.
  SERVICING_ERROR = 6;
  // Identifies errors that occur when clean install or update fail due to the
  // current configuration of the host.
  UNSUPPORTED_CONFIGURATION_ERROR = 7;
}

message FileLocation {
  // Path to the file.
  string path = 1;
  // Line number in the file.
  uint32 line = 2;
}